--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,16 +1,5 @@
 [global]
 
-# By default, Streamlit checks if the Python watchdog module is available and, if not,
-# prints a warning asking for you to install it. The watchdog module is not required,
-# it's just an optimization. If you know you don't want to install watchdog, you can
-# suppress this warning by setting this to True.
-# Default: false
-disableWatchdogWarning = false
-
-# Configure the ability to share apps publicly.
-# Default: true
-sharingMode = "off"
-
 # If True, will show a warning when you run a Streamlit-enabled script via "python my_script.py".
 # Default: true
 showWarningOnDirectExecution = true
@@ -22,14 +11,6 @@ showWarningOnDirectExecution = true
 level = "info"
 
 [client]
-
-# Whether to enable st.cache.
-# Default: true
-caching = true
-
-# If false, makes your Streamlit script not draw to a Streamlit app.
-# Default: true
-displayEnabled = true
 
 # Controls whether uncaught app exceptions are displayed in the browser. By default, this is set to True and Streamlit displays app exceptions and associated tracebacks in the browser.
 # Default: true
@@ -110,23 +91,9 @@ gatherUsageStats = true
 # Default: whatever value is set in server.port.
 serverPort = 8501
 
-[mapbox]
+# [mapbox] section removed - deprecated, use MAPBOX_API_KEY environment variable instead
 
-# Configure Streamlit to use a custom Mapbox token for elements like st.pydeck_chart and st.map.
-# To get a token for yourself, create an account at https://mapbox.com.
-# It's free (for moderate usage levels)!
-# Default: ""
-token = ""
-
-[deprecation]
-
-# Set to false to disable the deprecation warning for the file uploader encoding.
-# Default: true
-showfileUploaderEncoding = true
-
-# Set to false to disable the deprecation warning for using the global pyplot instance.
-# Default: true
-showPyplotGlobalUse = true
+# [deprecation] section removed - these options are no longer valid
 
 [theme]
 
