Optimize for Streamlit Cloud: fix config, logging, and page setup

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -18,78 +18,23 @@ showErrorDetails = true
 
 [server]
 
-# List of folders that should not be watched for changes. This impacts both "Run on Save" and @st.cache.
-# Relative paths will be taken as relative to the current working directory.
-# Example: ['/home/user1/env', 'relative/path/to/folder']
-# Default: []
-folderWatchBlacklist = []
-
-# Change the type of file watcher used by Streamlit, or turn it off completely.
-# Allowed values: * "auto" : Streamlit will attempt to use the watchdog module, and falls back to polling if watchdog is not available. * "watchdog" : Force Streamlit to use the watchdog module. * "poll" : Force Streamlit to always use polling. * "none" : Streamlit will not watch files.
-# Default: "auto"
-fileWatcherType = "auto"
-
-# Symmetric key used to produce signed cookies. If deploying on multiple replicas, this should be set to the same value across all replicas to ensure they all share the same secret.
-# Default: randomly generated secret key.
-cookieSecret = "a-random-key-appears-here"
-
-# If false, will attempt to open a browser window on start.
-# Default: false unless (1) we are on a Linux box where DISPLAY is unset, or (2) we are running in the Streamlit Atom plugin.
-headless = false
-
-# Automatically rerun script when the file is modified on disk.
-# Default: false
-runOnSave = false
-
-# The address where the server will listen for client and browser connections. Use this if you want to bind the server to a specific address. If set, the server will only be accessible from this address, and not from any aliases (like localhost).
-# Default: (unset)
-#address =
-
-# The port where the server will listen for client and browser connections.
-# Default: 8501
+# Configuration optimized for Streamlit Cloud deployment
+headless = true
 port = 8501
+enableCORS = false
+enableXsrfProtection = false
 
-# The base path for the URL where Streamlit should be served from.
-# Default: ""
-baseUrlPath = ""
-
-# Enables support for Cross-Origin Request Sharing (CORS) protection, for added security.
-# Due to conflicts between CORS and XSRF, if `server.enableXsrfProtection` is on and `server.enableCORS` is off at the same time, we will prioritize `server.enableXsrfProtection`.
-# Default: true
-enableCORS = true
-
-# Enables support for Cross-Site Request Forgery (XSRF) protection, for added security.
-# Due to conflicts between CORS and XSRF, if `server.enableXsrfProtection` is on and `server.enableCORS` is off at the same time, we will prioritize `server.enableXsrfProtection`.
-# Default: true
-enableXsrfProtection = true
-
-# Max size, in megabytes, for files uploaded with the file_uploader.
-# Default: 200
+# File upload settings
 maxUploadSize = 200
-
-# Max size, in megabytes, of messages that can be sent via the WebSocket connection.
-# Default: 200
 maxMessageSize = 200
 
-# Enables support for websocket compression.
-# Default: false
+# Performance settings
 enableWebsocketCompression = false
 
 [browser]
 
-# Internet address where users should point their browsers in order to connect to the app. Can be IP address or DNS name and path.
-# This is used to: - Set the correct URL for CORS and XSRF protection purposes. - Show the URL on the terminal - Open the browser
-# Default: 'localhost'
-serverAddress = "localhost"
-
-# Whether to send usage statistics to Streamlit.
-# Default: true
-gatherUsageStats = true
-
-# Port where users should point their browsers in order to connect to the app.
-# This is used to: - Set the correct URL for CORS and XSRF protection purposes. - Show the URL on the terminal - Open the browser
-# Default: whatever value is set in server.port.
-serverPort = 8501
+# Streamlit Cloud optimized browser settings
+gatherUsageStats = false
 
 # [mapbox] section removed - deprecated, use MAPBOX_API_KEY environment variable instead
 
